[package]
name = "service-async"
version = "0.1.6"
edition = "2021"

authors = ["ChiHai <ihciah@gmail.com>"]
categories = ["asynchronous"]
description = "A Service like tower in async style"
keywords = ["service", "async"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/ihciah/service-async"

[dependencies]
param = { version = "0.1.0", path = "../param" }
futures-util = "0.3"

[target.'cfg(unix)'.dev-dependencies]
monoio = { version = "0.1.5" }

[target.'cfg(not(unix))'.dev-dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
